Fixed extra white space in templates form resources. Changed second "Title" column in Callouts to be named "Label".

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -808,16 +808,16 @@
 	.developer .form_table li section input { margin: 5px 0; }
 	.developer .form_table li section select, .developer .form_table li section .select { margin: 5px 0; }
 
-	.developer .form_table .developer_resource_id { padding: 0 0 0 30px; text-align: left; width: 137px; }
-	.developer .form_table .developer_resource_id input { width: 100px; }
+	.developer .form_table .developer_resource_id { padding: 0 0 0 30px; text-align: left; width: 147px; }
+	.developer .form_table .developer_resource_id input { width: 110px; }
 	.developer .form_table .developer_resource_id span { margin: 5px 7px 0 -21px; }
-	.developer .form_table .developer_resource_title { text-align: left; width: 187px; }
-	.developer .form_table .developer_resource_title input { width: 153px; }
+	.developer .form_table .developer_resource_title { text-align: left; width: 202px; }
+	.developer .form_table .developer_resource_title input { width: 168px; }
 	.developer .form_table .developer_resource_form_title { padding: 0 0 0 35px; text-align: left; width: 289px; }
 	.developer .form_table .developer_resource_form_title input { width: 257px; }
 	.developer .form_table .developer_resource_form_title span { margin: 5px 10px 0 -25px; }
-	.developer .form_table .developer_resource_subtitle { text-align: left; width: 187px; }
-	.developer .form_table .developer_resource_subtitle input { width: 153px; }
+	.developer .form_table .developer_resource_subtitle { text-align: left; width: 202px; }
+	.developer .form_table .developer_resource_subtitle input { width: 168px; }
 	.developer .form_table .developer_resource_form_subtitle { text-align: left; width: 257px; }
 	.developer .form_table .developer_resource_form_subtitle input { width: 225px; }
 	.developer .form_table .developer_resource_type { padding: 0 20px 0 0; text-align: left; width: 175px; }
@@ -826,6 +826,14 @@
 	.developer .form_table .developer_resource_display_title { width: 40px; }
 	.developer .form_table .developer_resource_action { width: 60px; }
 	.developer .form_table .developer_resource_action a { margin: 5px 0 0 0; }
+	
+	.developer .form_table .developer_resource_callout_id { padding: 0 0 0 30px; text-align: left; width: 137px; }
+	.developer .form_table .developer_resource_callout_id input { width: 100px; }
+	.developer .form_table .developer_resource_callout_id span { margin: 5px 7px 0 -21px; }
+	.developer .form_table .developer_resource_callout_title { text-align: left; width: 187px; }
+	.developer .form_table .developer_resource_callout_title input { width: 153px; }
+	.developer .form_table .developer_resource_callout_subtitle { text-align: left; width: 187px; }
+	.developer .form_table .developer_resource_callout_subtitle input { width: 153px; }	
 	
 	#resource_table .developer_resource_display_title { padding: 12px 0 0 12px; width: 28px; }
 	
